Add Debian packaging

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 MANIFEST
 build
 dist
+debian/files
+debian/python-duo-client/
+debian/python-duo-client.substvars
+debian/python-duo-client.prerm.debhelper
+debian/python-duo-client.postinst.debhelper
+debian/python-duo-client.debhelper.log
