--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,5 @@ include LICENSE
 recursive-include examples *
 include tests/*.py
 include README.md
+include MANIFEST.in
+recursive-include debian *
